<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.carlfx.windowblur</groupId>
        <artifactId>windowblur</artifactId>
        <version>1.0</version>
    </parent>
	
    <groupId>com.carlfx</groupId>
    <artifactId>windowblursample</artifactId>
    <version>1.0.0</version>
    <name>Window Blur Effects Sample Demo</name>
	<description>A JavaFX application that uses JNA to access native Cocoa APIs. A two-way communication from Java to Objective-C.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.carlfx</groupId>
            <artifactId>windowblurlib</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <compilerArgs>
                        <arg>--add-opens</arg>
                        <arg>javafx.graphics/javafx.stage=com.carlfx.windowblursample</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.tk.quantum=com.carlfx.windowblursample</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.glass.ui=com.carlfx.windowblursample</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.3</version>
                <configuration>
                    <mainClass>com.carlfx.sample.App</mainClass>
                    <options>
                        <option>-Djava.library.path=windowblurlib/target/classes</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.stage=com.carlfx.windowblursample</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.tk.quantum=com.carlfx.windowblursample</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.glass.ui=com.carlfx.windowblursample</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>